enhanced password visibility and messed up syntax

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -38,7 +38,10 @@
                             </div>
                             <div>
                                 <label> Confirm Password </label>
-                                <input type="password" name="confirmPassword" placeholder="Confirm Password">
+                                <input type="password" name="confirmPassword" placeholder="Confirm Password" id="password2">
+                                <span class="eye">
+                                    <i class="fa-sharp fa-solid fa-eye-slash" id="togglePassword2"></i>
+                                </span>
                             </div>
                             <input type="submit" value="Sign In" id="sign__in">
                         </form>
