admin can delete user form group by userId, then automatically delete all that user todos in that group

--- a/views/groupTodos.ejs
+++ b/views/groupTodos.ejs
@@ -38,7 +38,7 @@
                                     class="fa-solid fa-caret-down"></i></a>
                             <div class="dropdown-content">
                                 <a href=<%=`/groups/addUser/${group._id}` %>>Add Member</a>
-                                <a href="#">Delete Member</a>
+                                <a href=<%=`/groups/deleteUser/${group._id}` %>>Delete Member</a>
                                 <a href="#">Delete Group</a>
                             </div>
                         </div>
