--- a/views/groupTodos.ejs
+++ b/views/groupTodos.ejs
@@ -39,7 +39,9 @@
                             <div class="dropdown-content">
                                 <a href=<%=`/groups/addUser/${group._id}` %>>Add Member</a>
                                 <a href=<%=`/groups/deleteUser/${group._id}` %>>Delete Member</a>
-                                <a href="#">Delete Group</a>
+                                <!-- <a href="#" id="delete-todo">Delete Group</a> -->
+                                <a href="#" id="delete-group" data-confirm="Are you sure to delete this item?">Delete
+                                    Group</a>
                             </div>
                         </div>
                         <% } %>
