--- a/public/css/login.css
+++ b/public/css/login.css
@@ -98,15 +98,19 @@ h4{
 
 /* MC */
 #passwordPrompt{
-    margin: 0 15%;
+    margin: 1% 15% 0 18%;
     padding-bottom: 25%;
-    height: 50px;
-    width: 300px;
-    color: black;
-    border: black 2px solid;
-    background-color: rebeccapurple;
+    height: 15%;
+    width: 25%;
+    color: slategray;
+    border: slategray 2px solid;
+    background-color: #e78d06;
     z-index: 10;
     position: absolute;
+}
+
+#forgotPasswordButton{
+    border-radius: 0 5%;
 }
 
 .hidden{
