--- a/views/groupTodos.ejs
+++ b/views/groupTodos.ejs
@@ -40,8 +40,8 @@
                                 <a href=<%=`/groups/addUser/${group._id}` %>>Add Member</a>
                                 <a href=<%=`/groups/deleteUser/${group._id}` %>>Delete Member</a>
                                 <!-- <a href="#" id="delete-todo">Delete Group</a> -->
-                                <a href="#" id="delete-group" data-confirm="Are you sure to delete this item?"
-                                    data-groupId=<%=`${group._id}` %>>Delete
+                                <a href="#" class="delete-group" data-confirm="Are you sure to delete this item?"
+                                    data-groupid=<%=group._id %>>Delete
                                     Group</a>
                             </div>
                         </div>
